<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/relativeLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <ImageView
        android:id="@+id/homescreenbg"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:contentDescription="@string/bg"
        android:scaleType="centerCrop"
        android:scaleX="1.1"
        android:src="@drawable/homebg"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="192dp"
        android:layout_marginBottom="617dp"
        android:fontFamily="@font/montserrat"
        android:gravity="center"
        android:text="@string/parcel_form"
        android:textColor="@color/white"
        android:textSize="40sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/edit_cusPhone"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="272dp"
        android:layout_marginBottom="24dp"
        android:autofillHints=""
        android:background="@drawable/custom_input"
        android:drawableStart="@drawable/ic_phone"
        android:drawablePadding="12dp"
        android:ems="10"
        android:textSize="13sp"
        android:fontFamily="sans-serif"
        android:hint="@string/phone_number"
        android:inputType="phone"
        android:minHeight="48dp"
        android:paddingStart="12dp"
        android:paddingEnd="12dp"
        android:textAlignment="viewStart"
        app:layout_constraintBottom_toTopOf="@+id/edit_trackNum"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="SpeakableTextPresentCheck" />

    <EditText
        android:id="@+id/edit_trackNum"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="344dp"
        android:layout_marginBottom="459dp"
        android:autofillHints=""
        android:background="@drawable/custom_input"
        android:drawableStart="@drawable/ic_barcode"
        android:drawablePadding="12dp"
        android:fontFamily="sans-serif"
        android:hint="Tracking Number (Double Tap to Scan)"
        android:inputType="text"
        android:minHeight="48dp"
        android:textSize="13sp"
        android:paddingStart="12dp"
        android:paddingEnd="12dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="SpeakableTextPresentCheck" />

    <Button
        android:id="@+id/btn_submit"
        android:layout_width="169dp"
        android:layout_height="49dp"
        android:background="@drawable/custom_btn"
        android:text="@string/submit_details"
        android:textAllCaps="false"
        app:layout_constraintBottom_toTopOf="@+id/pageMain"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_trackNum"
        app:layout_constraintVertical_bias="0.523" />

    <Button
        android:id="@+id/pageMain"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="160dp"
        android:layout_marginTop="504dp"
        android:layout_marginBottom="299dp"
        android:background="@drawable/custom_btn"
        android:text="@string/back"
        android:textAllCaps="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

</androidx.constraintlayout.widget.ConstraintLayout>